# c9-gamedata

./: .gitignore  README.md
data/: CMakeLists.txt
data/credits/: en.credits
data/help/: texts.json
data/json/: emit.json  flags.json  item_actions.json  item_category.json
data/json/itemgroups/: collections_domestic.json  misc.json  tools.json
data/json/itemgroups/Locations_MapExtras/: mansion.json
data/json/items/: fake.json  generic.json
data/json/items/tool/: science.json
data/json/mapgen/: mapgen-test.json
data/json/mapgen/house/: house_modern_lx.json
data/json/monstergroups/: nether.json
data/json/mutations/: mutations.json
data/json/recipes/: recipe_deconstruction.json
data/mainscreen/: credits.en  credits.ru  motd.en  motd.ru  tips.json  title.en
data/menus/: help.json  options_descr.json  options_game.json  options_world.json
data/mods/c9/: modinfo.json
data/mods/dda/: modinfo.json
data/mods/dda/json/: bionics.json  professions.json
data/mods/dda/json/itemgroups/: art_antiques_crafts.json
data/mods/dda/json/items/tool/: misc.json
data/mods/dda/json/monsters/: nether.json
data/mods/test_data/: README.md
data/motd/: en.motd  ru.motd
data/names/: en.json
data/raw/: keybindings.json
godot_project/: .gitignore  cn_front_godot.tres  export_presets.cfg  front_script.gdns  project.godot
godot_project/error_screen/: UI.gd  UI.tscn
godot_project/help_menu/: Help.gd  Help.tscn
godot_project/loading_screen/: LoadingUI.gd  LoadingUI.tscn
godot_project/main_menu/: UI.tscn
godot_project/main_screen/: BtnLoadgame.gd  BtnLoadgame.tscn  BtnMainMenu.tscn  BtnNewgame.gd  BtnNewgame.tscn  MainMenuButton.tscn  PanelLoadgame.gd  PanelLoadgame.tscn  PanelNewgame.gd  PanelNewgame.tscn  PanelText.tscn  UI.gd  UI.tscn  theme.tres  theme_btn_hover.tres
godot_project/natives/: cn_front_godot.tres  front_script.gdns
godot_project/newgame_screen/: ChargenScreen.gd  ChargenScreen.tscn  LocationPopup.gd  LocationPopup.tscn  ModItem.tscn  NewgameUI.gd  NewgameUI.tscn  Number.gd  Number.tscn  ProfessionPopup.gd  ProfessionPopup.tscn  ScenarioPopup.gd  ScenarioPopup.tscn  SkillsPopup.gd  SkillsPopup.tscn  StatsNumber.tscn  TraitItem.gd  TraitItem.tscn  TraitsPopup.gd  TraitsPopup.tscn  WorldgenScreen.gd  WorldgenScreen.tscn
godot_project/reusabe_menus/: FocusableScrollContainer.gd
godot_project/reusabe_menus/help/: Help.gd  Help.tscn
godot_project/reusabe_menus/settings/: Option.tscn  OptionsPanel.gd  OptionsPanel.tscn  Settings.gd  Settings.tscn
godot_project/root/: LoadingScreen.gd  LoadingScreen.tscn  Root.gd  Root.tscn
godot_project/settings_menu/: Option.gd  Option.tscn  Settings.gd  Settings.tscn
godot_project/theme/: mmenu_btn_focus.tres  mmenu_btn_hover.tres  mmenu_btn_normal.tres  mmenu_btn_pressed.tres  theme.tres  theme_btn_focus.tres  theme_btn_hover.tres
lang/: .gitignore  CMakeLists.txt  extract_json_strings.py
mods/dda/json/: loot_zones.json
mods/dda/json/itemgroups/Locations_MapExtras/: locations.json
mods/dda/json/monsters/: mi-go.json
